<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@drawable/green"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:stretchColumns="*">
	<TableRow>
		<TextView android:id="@+id/lblEmail" android:text="@string/REQUEST_EMAIL"
			android:textStyle="bold" android:padding="3dip" android:textColor="@drawable/black" />
	</TableRow>
	<TableRow>
		<EditText android:id="@+id/txtEmailText" android:padding="3dip"
			android:layout_width="fill_parent" android:layout_span="2" />
	</TableRow>
	<View android:layout_height="5dip" />
	<View android:layout_height="2dip" android:background="@drawable/dark_green" />
	<TableRow>
		<TextView android:id="@+id/lblRequestText" android:text="@string/REQUEST_TEXT"
			android:textStyle="bold" android:padding="3dip" android:textColor="@drawable/black" />
	</TableRow>
	<TableRow>
		<EditText android:id="@+id/txtRequestText" android:padding="3dip"
			android:layout_width="fill_parent" android:layout_height="100px"
			android:hint="@string/REQUEST_TEXT_HINT" android:layout_span="2" android:inputType="textCapSentences"/>
	</TableRow>

	<View android:layout_height="5dip" />

	<View android:layout_height="2dip" android:background="@drawable/dark_green" />
	<TableRow>
		<Button android:id="@+id/btnSend" android:text="@string/BUTTON_SEND"
			android:padding="3dip" />
		<TableRow android:gravity="right">
			<TextView android:id="@+id/lblAttachLog"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/CHK_BOX_ATTACH_LOG" android:padding="3dip"
				android:textColor="@drawable/black" />
			<CheckBox android:id="@+id/chkAttachLog" android:padding="3dip"
				android:width="10px" />
		</TableRow>
	</TableRow>
</TableLayout>

